react/global.css
.vtex-login__arrow-up {
  transform: rotate(45deg);
  width: 25px;
  height: 25px;
  right: 7px;
}

.vtex-login__box {
  top: 100%;
  visibility: visible;
  min-width: 310px;
}

.vtex-login__content-container {
  min-width: 100%;
}

.vtex-login__button--link {
  height: 20px;
  width: 40px;
}

.vtex-login__container {
  height: 48px;
}

.vtex-login-content {
  padding: .75rem;
  margin: 0 auto;
}

.vtex-login__code-confirmation,
.vtex-login__email-verification {
  width: 100%;
}

.vtex-login-content__form {
  min-width: 280px;
}

.vtex-login-content--always-with-options {
  min-height: 300px;
  max-width: 700px;
}

.vtex-login__form-title {
  color: #3d5980;
}

.vtex-login__form-error {
  font-size: .75rem;
  text-align: center;
  background-color: #ffe6e6;
  padding: .25rem;
  margin: .25rem 0;
}

.vtex-login__form-footer {
  border-top: 1px solid #e3e4e6;
  min-height: 2rem;
  padding-top: .75rem;
}

.vtex-login__send-button {
  margin-left: auto;
}

.vtex-login__send-button:only-child {
  margin: 0;
  width: 100%;
}

.vtex-login__send-button:only-child .vtex-button {
  width: 100%;
}

.vtex-login__input-container {
  padding: .5rem 0;
}

.vtex-login__button .vtex-button {
  border: 1px solid rgb(233, 233, 233);
  width: 100%;
  min-height: 40px;
}

.vtex-login__button--social .vtex-button:hover {
  background: rgb(235, 235, 235);
}

.vtex-login__button .vtex-button .vtex-login__oauth-label {
  bottom: 4px;
  margin: 0 20px 0 20px;
}

.vtex-login__oauth-provider {
  margin-left: 5px;
}

@media only screen and (max-width: 600px) {
  .vtex-login-content--always-with-options {
    max-width: 400px;
  }
}

